--- a/tablebooking/index.html
+++ b/tablebooking/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Reservation</title>
+  <title>Reservation - Cielo Rossa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -29,8 +29,8 @@
   </div>
   <div class="header-right">
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Menu</a>
+      <a href="../index.html">Home</a>
+      <a href="../menupage/index.html">Menu</a>
       <a href="../aboutpage/index.html">About Us</a>
     </nav>
   </div>
@@ -90,7 +90,7 @@
 
 <footer class="site-footer cha">
   <div class="footer-icons">
-    <p class="inf">2025 Cielo Rossa &copy;. All rights reserved.</p>
+    <p class="inf">&copy; 2025 Cielo Rossa. All rights reserved.</p>
     <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
     <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
