--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="site-header">
       <div class="header-left h1">
         <a>
-          <img src="homeimg/Wetwew.png" alt="Restaurant Logo" class="logo">
+          <img src="homeimg/wetwew.png" alt="Restaurant Logo" class="logo">
           <span class="brand-name">Cielo Rossa</span>
         </a>
       </div>
