--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   </div>
 </section>
 
+<section class="wow1"></section>
 <div class="row col-12 wow1">
   <div class="container col-4">
       <h2 class="my-1 boom">Location</h2>
@@ -74,6 +75,7 @@
       </p>
   </div>
 </div>
+</section>
 
 <!-- Featured Menu -->
 <section class="menu-section py-5 bg1 wow1">
